--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=aston-homework-2
 
 bot.name=AstonHomeworkWeatherBot
 bot.token=7494869790:AAH56ndNQ7JmHhjfyYjn-9R0_74HAP8HdP8
+
+spring.sql.init.mode=always
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=dbuser
+spring.datasource.password=12345
